{
    "appTitle": "Multiplication Trainer",
    "selectOperands": "Select Operands",
    "apply": "APPLY",
    "refresh": "REFRESH",
    "multiplicationInfo": "Multiplication Info",
    "multiplicationDescription": "Multiplication is repeated addition.",
    "operand": "Operand",
    "multiplier": "Multiplier",
    "product": "Product",
    "ok": "OK",
    "multiplicand": "Multiplicand",
    "selectMultiplicands": "Select Multiplicands",
    "additionAppTitle": "Addition Trainer",
    "additionInfo": "Addition Info",
    "additionDescription": "Addition is finding the total or sum by combining two or more numbers.",
    "summand": "Summand",
    "sum": "Sum"
}
