...
            Divider(
              color: gameColors.textMainColor!.withValues(),
              height: 24,
              thickness: 2,
            ),
            MenuItemButton(
              key: const ValueKey('apply_button'),
              style: ButtonStyle(
                backgroundColor:
                    WidgetStatePropertyAll(gameColors.numberBtnColor1),
                shape: WidgetStatePropertyAll(
                  RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(12),
...
