...
                ],
              ),
            ),
            const Spacer(),
            Center(
              child: Text(
                key: const Key('display_output'),
                state.displayOutput,
                style: Theme.of(context)
                    .textTheme
                    .displayLarge
                    ?.copyWith(color: displayColor),
              ),
...
